Change ajaxtoggle url to use external API

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                             <button 
                                 class="btn btn-toggle btn-success" 
                                 data-state="on" 
-                                data-on="partials/delay.php?state=on"
-                                data-off="partials/delay.php?state=off"
+                                data-on="https://api.github.com/zen"
+                                data-off="https://api.github.com/zen"
                             >
                             </button>
                             <script>
