Change submodule to use https

--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
                             <button 
                                 class="btn btn-toggle btn-success" 
                                 data-state="on" 
-                                data-on="https://api.github.com/zen"
-                                data-off="https://api.github.com/zen"
+                                data-on="https://api.github.com/zen?toggle=on"
+                                data-off="https://api.github.com/zen?toggle=off"
                             >
                             </button>
                             <script>
